--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: sensitivity
-Version: 1.1
-Date: 2006-08-03
+Version: 1.2
+Date: 2006-08-28
 Title: Sensitivity Analysis
-Company: Commissariat a l'Energie Atomique, Service d'Etudes et de 
-  Simulation du Comportement des Combustibles (CEA/DEN/CAD/DEC/SESC) 
-Author: Gilles Pujol
+Author: Gilles Pujol (this package was originally developped at Commissariat a 
+  l'Energie Atomique CEA, Service d'Etudes et de Simulation du Comportement des 
+  Combustibles CEA/DEN/CAD/DEC/SESC, France).
 Maintainer: Bertrand Iooss <bertrand.iooss@cea.fr>
 Depends: R, boot
 Description: This package allows to perform sensitivity analyses within the R
@@ -12,4 +12,4 @@ Description: This package allows to perform sensitivity analyses within the R
   PCC...), the screening method of Morris and non-linear global sensitivity
   analysis (Sobol indices, FAST method).
 License: CeCILL version 2
-Packaged: Thu Aug  3 15:42:00 2006; pujol
+Packaged: Mon Aug 28 17:47:22 2006; pujol
