--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: sensitivity
-Version: 1.2
-Date: 2006-08-28
+Version: 1.3-0
+Date: 2007-01-04
 Title: Sensitivity Analysis
 Author: Gilles Pujol (this package was originally developped at Commissariat a 
   l'Energie Atomique CEA, Service d'Etudes et de Simulation du Comportement des 
-  Combustibles CEA/DEN/CAD/DEC/SESC, France).
+  Combustibles CEA/DEN/CAD/DEC/SESC, France ; the author would like to thank : 
+  Patrick Obry, Bertrand Iooss, Claire Cannamela and Frederic Michel).
 Maintainer: Bertrand Iooss <bertrand.iooss@cea.fr>
 Depends: R, boot
 Description: This package allows to perform sensitivity analyses within the R
   environment. Implemented methods are : linear sensitivity analysis (SRC,
-  PCC...), the screening method of Morris and non-linear global sensitivity
-  analysis (Sobol indices, FAST method).
+  PCC, rank analysis), the screening method of Morris, the Sobol global 
+  sensitivity indices (two methods of estimation), and the FAST method.
 License: CeCILL version 2
-Packaged: Mon Aug 28 17:47:22 2006; pujol
+Packaged: Fri Jan  5 14:12:49 2007; hornik
