--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,14 @@
 Package: sensitivity
-Version: 1.3-1
-Date: 2008-07-09
+Version: 1.4-0
+Date: 2008-07-14
 Title: Sensitivity Analysis
-Author: Gilles Pujol (this package was originally developped at Commissariat a 
-  l'Energie Atomique CEA, Service d'Etudes et de Simulation du Comportement des 
-  Combustibles CEA/DEN/CAD/DEC/SESC, France ; the author would like to thank : 
-  Patrick Obry, Bertrand Iooss, Claire Cannamela and Frederic Michel).
+Author: Gilles Pujol
 Maintainer: Bertrand Iooss <bertrand.iooss@cea.fr>
-Depends: R (>= 2.4.0), boot
-Description: This package allows to perform sensitivity analyses within the R
-  environment. Implemented methods are : linear sensitivity analysis (SRC,
-  PCC, rank analysis), the screening method of Morris, the Sobol global 
-  sensitivity indices (two methods of estimation), and the FAST method.
-License: CeCILL version 2
-Packaged: Wed Jul  9 11:05:03 2008; bi165542
+Depends: R (>= 2.7.0), boot
+Suggests: rgl
+Description: A collection of functions for factor screening and global
+        sensitivity analysis of model output.
+License: CeCILL-2
+Packaged: Tue Jul 15 11:53:00 2008; pujol
+Repository: CRAN
+Date/Publication: 2008-07-15 15:47:55
