--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
 Package: sensitivity
-Version: 1.4-1
-Date: 2012-07-01
+Version: 1.5
+Date: 2012-07-27
 Title: Sensitivity Analysis
-Author: Gilles Pujol
+Author: Gilles Pujol, Bertrand Iooss, Alexandre Janon
 Maintainer: Bertrand Iooss <biooss@yahoo.fr>
-Depends: R (>= 2.7.0), boot
-Suggests: rgl
+Depends: R (>= 2.7.0), boot, rgl
 Description: A collection of functions for factor screening and global
         sensitivity analysis of model output.
 License: CeCILL-2
-Packaged: 2012-07-01 17:10:35 UTC; pujol
 Repository: CRAN
-Date/Publication: 2012-07-01 17:42:32
+Packaged: 2012-09-08 11:59:55 UTC; al
+Date/Publication: 2012-09-09 17:06:21
