--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sensitivity
-Version: 1.6
-Date: 2012-10-30
+Version: 1.6-1
+Date: 2012-12-28
 Title: Sensitivity Analysis
 Author: Gilles Pujol, Bertrand Iooss, Alexandre Janon
 Maintainer: Bertrand Iooss <biooss@yahoo.fr>
@@ -8,6 +8,6 @@ Depends: R (>= 2.7.0), boot, rgl
 Description: A collection of functions for factor screening and global
         sensitivity analysis of model output.
 License: CeCILL-2
+Packaged: 2012-12-28 15:01:07 UTC; pujol
 Repository: CRAN
-Packaged: 2012-11-13 14:54:41 UTC; al
-Date/Publication: 2012-11-14 07:10:08
+Date/Publication: 2012-12-28 16:23:39
