--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: sensitivity
-Version: 1.8-1
-Date: 2014-03-03
+Version: 1.8-2
+Date: 2014-04-28
 Title: Sensitivity Analysis
 Author: Gilles Pujol, Bertrand Iooss, Alexandre Janon with contributions from Laurent Gilquin, Loic Le Gratiet, Paul Lemaitre
 Maintainer: Bertrand Iooss <biooss@yahoo.fr>
 Depends: R (>= 3.0.0)
-Imports: boot, rgl, evd, numbers, DiceKriging
+Imports: boot
+Suggests: rgl, evd, numbers, DiceKriging, fanovaGraph
 Description: A collection of functions for factor screening, global sensitivity analysis and reliability sensitivity analysis of  model output.
 License: GPL-2
-Packaged: 2014-03-03 23:15:44 UTC; orlane
+Packaged: 2014-04-28 17:15:33 UTC; al
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-03-04 09:23:06
+Date/Publication: 2014-04-29 07:59:09
