--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: sensitivity
-Version: 1.9
-Date: 2014-08-25
+Version: 1.10
+Date: 2014-11-12
 Title: Sensitivity Analysis
 Author: Gilles Pujol, Bertrand Iooss, Alexandre Janon with contributions from Paul Lemaitre, Laurent Gilquin, Loic Le Gratiet, Taieb Touati, Bernardo Ramos, Jana Fruth and Sebastien Da Veiga
 Maintainer: Bertrand Iooss <biooss@yahoo.fr>
 Depends: R (>= 3.0.0)
 Imports: boot
-Suggests: rgl, evd, numbers, DiceKriging, ks, fanovaGraph
+Suggests: rgl, evd, numbers, DiceKriging, ks, igraph, fanovaGraph
 Description: A collection of functions for factor screening, global sensitivity analysis and reliability sensitivity analysis of model output.
 License: GPL-2
-Packaged: 2014-08-26 05:57:17 UTC; al
+Packaged: 2014-11-26 13:22:54 UTC; F80570
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-08-26 09:25:25
+Date/Publication: 2014-11-26 14:56:25
