--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: sensitivity
-Version: 1.11.1
-Date: 2015-05-31
+Version: 1.12
+Date: 2016-01-30
 Title: Sensitivity Analysis
 Author: Gilles Pujol, Bertrand Iooss, Alexandre Janon with contributions from Sebastien Da Veiga, Jana Fruth, Laurent Gilquin, Joseph Guillaume, Loic Le Gratiet, Paul Lemaitre, Bernardo Ramos, Taieb Touati 
 Maintainer: Bertrand Iooss <biooss@yahoo.fr>
 Depends: R (>= 3.0.0)
 Imports: boot
 Suggests: DiceDesign, randtoolbox, DiceKriging, fanovaGraph, rgl, evd,
-        numbers, ks, igraph, ggplot2, reshape2
+        numbers, ks, igraph, ggplot2, reshape2,
+    testthat
 Description: A collection of functions for factor screening, global sensitivity analysis and reliability sensitivity analysis of model output.
 License: GPL-2
 Packaged: 2015-06-11 21:40:25 UTC; F80570
